# minceraft

./: .gitignore  CMakeLists.txt  LICENSE  PERSONAL  README.md
glsl/: block_fragment.glsl  block_vertex.glsl  item_fragment.glsl  item_vertex.glsl  quad_fragment.glsl  quad_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl  text_fragment.glsl  text_vertex.glsl
lib/glad/: glad.h
src/: main.cpp  main.hpp
src/glad/: glad.c
src/inc/: accessor.hpp  block.hpp  button.hpp  chunk.hpp  face.hpp  file.hpp  fire.hpp  generator.hpp  gui.hpp  gui2.hpp  gui3.hpp  gui4.hpp  hitbox.hpp  image.hpp  mesh.hpp  plant.hpp  program.hpp  shader.hpp  skylight.hpp  sprite.hpp  texture.hpp  voxel.hpp  world.hpp
